2009-01-20  Darin Adler  <darin@apple.com>

        Try to fix Wx build.

        * platform/wx/PasteboardWx.cpp:
        (WebCore::Pasteboard::writeSelection): Removed code that replaces backslash
        with backslashAsCurrencySymbol. I'm pretty sure this is not needed when writing
        to the clipboard. Other platforms don't do it. If it was needed, the new function
        to use would be displayStringModifiedByEncoding.

2009-01-19  Brent Fulgham  <bfulgham@gmail.com>

        Reviewed by Mitz Pettel.

        Fixes https://bugs.webkit.org/show_bug.cgi?id=23423.

        The Windows Cairo post-build targets (Release/Debug) do not
        copy all of the headers that the CG-based build does.

        * WebCore.vcproj/WebCore.vcproj: Extend WebCore Cairo build targets
          to copy the page/animation/*.h files into WebKitBuild so that
          WebKit can find them.

2009-01-20  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=23413
        Remove unused WebCore::setDeferringTimers()

        * platform/Timer.cpp:
        (WebCore::updateSharedTimer):
        * platform/Timer.h:

2009-01-20  David Hyatt  <hyatt@apple.com>

        Tighten up the type of RenderObject owned by RenderLayer to be a RenderBox.  Rename m_object to
        m_renderer to be consistent with the corresponding member function.

        Reviewed by Jon Honeycutt

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::RenderLayer):
        (WebCore::RenderLayer::updateLayerPositions):
        (WebCore::RenderLayer::updateVisibilityStatus):
        (WebCore::RenderLayer::updateLayerPosition):
        (WebCore::RenderLayer::stackingContext):
        (WebCore::RenderLayer::enclosingPositionedAncestor):
        (WebCore::RenderLayer::enclosingTransformedAncestor):
        (WebCore::RenderLayer::isTransparent):
        (WebCore::RenderLayer::convertToLayerCoords):